[package]
name = "lz"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
cursive = { version = "0.21", default-features = false, features = ["crossterm-backend"] }
globset = "0.4"
humantime = "2"
owo-colors = "4"
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
